# AI-Role-based-Interactive-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
config/teams/: team-a.json  team-b.json
config/workflows/: lean-delivery.json  product-to-delivery.json
docs/: architecture.md  component-design.md  protocol-schema.json  sample-workflow-execution.md  skeleton-structure.md  ui-wireframe.md
src/bmad_team_orchestrator/: __init__.py  __main__.py  api_server.py  application_writer.py  aria_agents.py  bmad_catalog.py  director.py  llm_provider.py  models.py  protocol.py  runner.py
src/bmad_team_orchestrator/agents/: __init__.py  adapter.py  base.py
tests/: test_application_writer.py  test_aria_agents.py  test_llm_provider.py  test_runtime.py
ui/: index.html
